--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: ruby
-cache: bundler
 rvm:
   - 2.2.9
   - 2.3.8
   - 2.4.6
   - 2.5.5
+cache:
+  - bundler
+before_install:
+  - gem update --system
+  - gem install bundler
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
